[tool.poetry]
name = "martins-obsidian-vault-helpers"
version = "0.1.0"
description = "Martin's helpers for an Obsidian Vault"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
martins-obsidian-vault-helpers = "martins_obsidian_vault_helpers.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
